--- a/portfolio.html
+++ b/portfolio.html
@@ -13,7 +13,7 @@
 
 <body>
   <header>
-
+    <div class="container">
     <nav>
       <p> <a href="" class="link"> <span class="logo">Web</span>Studio</a></p>
       <ul class="site-nav">
@@ -24,9 +24,11 @@
     </nav>
     <a class="contact-link" href="info@devstudio.com">info@devstudio.com</a>
     <a class="contact-link" href="tell:+380961111111">+38 096 111 11 11</a>
+    </div>
   </header>
   <main>
   <section class="project">
+    <div class="container">
     <h1 class="hiden-text">Меню</h1>
     <ul class="filter">
       <li><button class="link">Все</button></li>
@@ -35,62 +37,85 @@
       <li><button class="link">Дизайн</button></li>
       <li><button class="link">Маркетинг</button></li>
   </ul>
-</section>
   <section class="portfolio">
   <div class="project-name">
   <img src="./images_portpholio/технокряк.jpg" alt="Проект">
+  <div class="chapter">
   <h3>Технокряк</h3>
   <p>Веб-сайт</p>
 </div>
+</div>
 <div class="project-name">
   <img src="./images_portpholio/Постер_New_Orlean_vs_Golden_Star.jpg" alt="Проект">
+  <div class="chapter">
   <h3>Постер New Orlean vs Golden Star</h3>
   <p>Дизайн</p>
 </div>
+</div>
 <div class="project-name">
   <img src="./images_portpholio/Ресторан_Seafood.jpg" alt="Проект">
+  <div class="chapter">
   <h3>Ресторан Seafood</h3>
   <p>Приложение</p>
 </div>
+</div>
 <div class="project-name">
   <img src="./images_portpholio/Проект_Prime.jpg" alt="Проект">
+  <div class="chapter">
   <h3>Проект Prime</h3>
   <p>Маркетинг</p>
 </div>
+</div>
 <div class="project-name">
   <img src="./images_portpholio/Проект_Boxes.jpg" alt="Проект">
+  <div class="chapter">
   <h3>Проект Boxes</h3>
   <p>Приложение</p>
 </div>
+</div>
 <div class="project-name">
   <img src="./images_portpholio/Inspiration_has_no_Borders.jpg" alt="Проект">
+  <div class="chapter">
   <h3>Inspiration has no Borders</h3>
   <p>Веб-сайт</p>
 </div>
+</div>
 <div class="project-name">
   <img src="./images_portpholio/Издание_Limited_Edition.jpg" alt="Проект">
+  <div class="chapter">
   <h3>Издание Limited Edition</h3>
   <p>Дизайн</p>
 </div>
+</div>
 <div class="project-name">
   <img src="./images_portpholio/Проект_LAB.jpg" alt="Проект">
+  <div class="chapter">
   <h3>Проект LAB</h3>
   <p>Маркетинг</p>
 </div>
+</div>
 <div class="project-name">
   <img src="./images_portpholio/Growing_Business.jpg" alt="Проект">
+  <div class="chapter">
   <h3>Growing Business</h3>
   <p>Приложение</p>
 </div>
+</div>
 </section>
+</section>
+</div>
   </main>
   <footer>
+    <div class="container">
     <p> <a href=""> <span class="logo">Web</span><span class="alt-logo">Studio</span></a></p>
+    <div class="go_to">
     <address>г. Киев, пр-т Леси Украинки, 26</address>
     <ul>
       <li><a class="contact-link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
       <li><a class="contact-link" href="tell:+380961111111">+38 096 111 11 11</a></li>
     </ul>
+  </div>
+  </div>
   </footer>
 </body>
 
