--- a/index.html
+++ b/index.html
@@ -14,82 +14,328 @@
 
 <body>
   <header>
+    <div class="container">
+      <section class="connection">
     <nav>
-      <p> <a href="" class="link"> <span class="logo">Web</span>Studio</a></p>
+      <p> <a href="" class="link"><span class="logo">Web</span>Studio</a></p>
       <ul class="site-nav">
         <li class="list-item"><a href="./index.html" class="link">Студия</a></li>
         <li class="list-item"><a href="./portfolio.html" class="link">Портфолио</a></li>
         <li class="list-item"><a href="" class="link">Контакты</a></li>
       </ul>
     </nav>
-    <div class="connection">
-    <a class="contact-link" href="info@devstudio.com">info@devstudio.com</a>
-    <a class="contact-link" href="tell:+380961111111">+38 096 111 11 11</a>
+    <svg class="head-ico">
+      <use href="./images/symbol-defs.svg#icon-envelope"></use>
+    </svg>
+    <a class="contact-link" href="mail-to:info@devstudio.com" >info@devstudio.com</a>
+    <svg class="head-ico">
+      <use href="./images/symbol-defs.svg#icon-phone"></use>
+    </svg>
+    <a class="contact-link" href="tell:+380961111111" >+38 096 111 11 11</a>
+  </section>
   </div>
   </header>
   <main>
+    
     <section class="blackboard">
+      <div class="container">
       <h1><a href="" class="hero-title">ЭФФЕКТИВНЫЕ РЕШЕНИЯ <br> ДЛЯ ВАШЕГО БИЗНЕСА</a></h1>
-      <button>Заказать услугу</button> 
+      <button>Заказать услугу</button>
+    </div>
     </section>
     <section class="our-benefits">
+      <div class="container">
       <h2 class="hiden-text">Наши преимущества</h2>
       <ul class="adv">
         <li>
+          <div class="pic-ido">
+          <svg class="adv-ico">
+            <use href="./images/symbol-defs.svg#icon-antenna"></use>
+          </svg>
+        </div>
           <h3>Внимание к деталям</h3>
           <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
         </li>
         <li>
+            <div class="pic-ido">
+            <svg class="adv-ico">
+              <use href="./images/symbol-defs.svg#icon-clock-1"></use>
+            </svg>
+          </div>
           <h3>Пунктуальность</h3>
           <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
         </li>
         <li>
+            <div class="pic-ido">
+            <svg class="adv-ico">
+              <use href="./images/symbol-defs.svg#icon-diagram"></use>
+            </svg>
+          </div>
           <h3>Планирование</h3>
           <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
         </li>
         <li>
+            <div class="pic-ido">
+            <svg class="adv-ico">
+              <use href="./images/symbol-defs.svg#icon-astronaut"></use>
+            </svg>
+          </div>
           <h3>Современные технологии</h3>
           <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
         </li>
       </ul>
+    </div>
     </section>
-    <section>
+    <section class="facility">
+      <div class="container">
       <h2 class="section-title">Чем мы занимаемся</h2>
       <ul class="wwd">
         <li><img src="./images/box1.jpg" width="370" height="294" alt="проэктирование"></li>
         <li><img src="./images/box2.jpg" width="370" height="294" alt="программирование"></li>
         <li><img src="./images/box3.jpg" width="370" height="294" alt="дизайн"></li>
       </ul>
+    </div>
     </section>
     <section class="team-board">
+      <div class="container">
       <h2 class="section-title">Наша команда</h2>
       <ul class="team">
-        <li><img src="./images/игорьдемьяненко.jpg" width="270" height="260" alt="сотрудник">
+        <li class="team-mate"><img src="./images/игорьдемьяненко.jpg" width="270" height="260" alt="сотрудник">
+          <div class="dude">
           <h3>Игорь Демьяненко</h3>
           <p>Product Designer</p>
+            <ul class="socials">
+              <li class="item">
+                <a class="social-button" href="">
+                <svg class="team-icon">
+                  <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                </svg>
+              </a>
+            </li>
+              <li class="item">
+                <a class="social-button" href="">
+                  <svg class="team-icon">
+                    <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="item">
+                <a class="social-button" href="">
+                  <svg class="team-icon">
+                    <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="item">
+                <a class="social-button" href="">
+                  <svg class="team-icon">
+                    <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                  </svg>
+                </a>
+              </li>
+            </ul>
+        </div>
         </li>
-        <li><img src="./images/ольгарепина.jpg" width="270" height="260" alt="сотрудник">
+        <li class="team-mate"><img src="./images/ольгарепина.jpg" width="270" height="260" alt="сотрудник">
+          <div class="dude">
           <h3>Ольга Репина</h3>
           <p>Frontend Developer</p>
+          <ul class="socials">
+            <li class="item">
+              <a class="social-button" href="">
+              <svg class="team-icon">
+                <use href="./images/symbol-defs.svg#icon-instagram"></use>
+              </svg>
+            </a>
+          </li>
+            <li class="item">
+              <a class="social-button" href="">
+                <svg class="team-icon">
+                  <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="item">
+              <a class="social-button" href="">
+                <svg class="team-icon">
+                  <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="item">
+              <a class="social-button" href="">
+                <svg class="team-icon">
+                  <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
         </li>
-        <li><img src="./images/николайтарасов.jpg" width="270" height="260" alt="сотрудник">
+        <li class="team-mate"><img src="./images/николайтарасов.jpg" width="270" height="260" alt="сотрудник">
+          <div class="dude">
           <h3>Николай Тарасов</h3>
           <p>Marketing</p>
+          <ul class="socials">
+            <li class="item">
+              <a class="social-button" href="">
+              <svg class="team-icon">
+                <use href="./images/symbol-defs.svg#icon-instagram"></use>
+              </svg>
+            </a>
+          </li>
+            <li class="item">
+              <a class="social-button" href="">
+                <svg class="team-icon">
+                  <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="item">
+              <a class="social-button" href="">
+                <svg class="team-icon">
+                  <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="item">
+              <a class="social-button" href="">
+                <svg class="team-icon">
+                  <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
         </li>
-        <li><img src="./images/михаилермаков.jpg" width="270" height="260" alt="сотрудник">
+        <li class="team-mate"><img src="./images/михаилермаков.jpg" width="270" height="260" alt="сотрудник">
+          <div class="dude">
           <h3>Михаил Ермаков</h3>
           <p>UI Designer</p>
+          <ul class="socials">
+            <li class="item">
+              <a class="social-button" href="">
+              <svg class="team-icon">
+                <use href="./images/symbol-defs.svg#icon-instagram"></use>
+              </svg>
+            </a>
+          </li>
+            <li class="item">
+              <a class="social-button" href="">
+                <svg class="team-icon">
+                  <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="item">
+              <a class="social-button" href="">
+                <svg class="team-icon">
+                  <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="item">
+              <a class="social-button" href="">
+                <svg class="team-icon">
+                  <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
         </li>
       </ul>
-    </section>
+    </div>
+  </section>
+      <section class="our-clients">
+        <div class="container">
+          <h2 class="section-title">Постоянные клиенты</h2>
+          <ul class="client">
+            <li>
+              <a class="cli-link" href="">
+                <svg class="cli-ico">
+                  <use href="./images/symbol-defs.svg#icon-logo-1"></use>
+                </svg>
+              </a>
+            </li>  
+            <li><a class="cli-link" href="">
+              <svg class="cli-ico">
+                <use href="./images/symbol-defs.svg#icon-logo-2"></use>
+              </svg>
+            </a>
+          </li>
+            <li><a class="cli-link" href="">
+              <svg class="cli-ico">
+                <use href="./images/symbol-defs.svg#icon-logo-3"></use>
+              </svg>
+            </a>
+          </li>
+            <li><a class="cli-link" href="">
+              <svg class="cli-ico">
+                <use href="./images/symbol-defs.svg#icon-logo-4"></use>
+              </svg>
+            </a>
+          </li>
+            <li><a class="cli-link" href="">
+              <svg class="cli-ico">
+              <use href="./images/symbol-defs.svg#icon-logo-5"></use>
+            </svg>
+          </a>
+        </li>
+            <li><a class="cli-link" href="">
+              <svg class="cli-ico">
+                <use href="./images/symbol-defs.svg#icon-logo-3"></use>
+              </svg>
+            </a>
+          </li>
+          </ul>
+        </div>
+      </section>
   </main>
   <footer>
+    <div class="container">
     <p> <a href=""> <span class="logo">Web</span><span class="alt-logo">Studio</span></a></p>
+    <div class="connect">
+      <h3>присоединяйтесь</h3>
+      <ul class="socials-foot">
+        <li class="item-foot">
+          <a class="social-button-foot" href="">
+          <svg class="team-icon-foot">
+            <use href="./images/symbol-defs.svg#icon-instagram"></use>
+          </svg>
+        </a>
+      </li>
+      <li class="item-foot">
+        <a class="social-button-foot" href="">
+        <svg class="team-icon-foot">
+              <use href="./images/symbol-defs.svg#icon-twitter"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="item-foot">
+          <a class="social-button-foot" href="">
+          <svg class="team-icon-foot">
+              <use href="./images/symbol-defs.svg#icon-facebook"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="item-foot">
+          <a class="social-button-foot" href="">
+          <svg class="team-icon-foot">
+              <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+            </svg>
+          </a>
+        </li>
+      </ul>
+    </div>
+    <div class="go_to">
     <address>г. Киев, пр-т Леси Украинки, 26</address>
     <ul>
       <li><a class="contact-link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
       <li><a class="contact-link" href="tell:+380961111111">+38 096 111 11 11</a></li>
     </ul>
+  </div>
+</div>
   </footer>
 </body>
 
